@@ -90,6 +90,8 @@ New features:
     before doing an allocation on the device.
   * Discard environment variable STARPU_LIMIT_GPU_MEM and define
     instead STARPU_LIMIT_CUDA_MEM and STARPU_LIMIT_OPENCL_MEM
+  * Introduce new variables STARPU_LIMIT_CUDA_devid_MEM and
+    STARPU_LIMIT_OPENCL_devid_MEM to limit memory per specific device
 
 Changes:
   * Fix the block filter functions.
